Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -121,6 +121,42 @@
               </li>
             </ul>
           </div>
+          <!-- state bank of india -->
+          <div>
+            <h4 class="underline">State Bank of India</h4>
+            <ul>
+              <li>Business Name: Prime Properties Real Estate Agency®</li>
+              <li>Legal Name / Proprietor: Sangeetha Tuma</li>
+              <li>GSTIN NO: 36AETPT2433F1Z7</li>
+              <li class="red"><b>Remarks:</b></li>
+              <ul>
+                <li>
+                  <span class="red">PAN and PAN details deleted</span> from
+                  current account
+                </li>
+                <li>
+                  <span class="red">Fake PAN & PAN details</span> updated
+                  fraudulently in current account of Prime Properties Real
+                  Estate Agency®
+                </li>
+                <li>
+                  PAN registered under GSTIN and PAN maintained in the Bank
+                  Account records are
+                  <span class="red">NOT SAME/ MISMATCH</span> as per status on
+                  03-02-2023
+                </li>
+              </ul>
+            </ul>
+          </div>
+          <!-- suspecting and noticed -->
+          <div>
+            <h4 class="underline">Suspecting and Noticed:</h4>
+            <p>
+              Government of India GSTIN Official website information
+              <span class="red">Deleted</span> in the year 2023 businesses of
+              Prime Properties Real Estate Agency® and Blossom Digital Shopping
+            </p>
+          </div>
         </div>
         <!--  -->
         <hr />
@@ -284,7 +320,6 @@
       <section>
         <h3>Telangana State Real Estate Regulatory Authority:</h3>
         <ul>
-          <li>Authorized User/ Agent: Sangeetha Tuma</li>
         </ul>
         <ol>
           <!-- one -->
@@ -293,6 +328,7 @@
               TS RERA Registration certificate of real estate agent:
             </h5>
             <ul class="sub-ul">
+              <li>Authorized User/ Agent: Tuma Sangeetha</li>
               <li>
                 <b>Issued Date & Duration: </b><br />Commencing from
                 <b>18-02-2020</b> and Ending on <b>17-02-2025</b>
@@ -318,6 +354,7 @@
               TG RERA Registration certificate of real estate agent:
             </h5>
             <ul class="sub-ul">
+              <li>Authorized User/ Agent: Sangeetha Tuma</li>
               <li>
                 <b>Issued Date & Duration: </b> <br />Commencing from
                 <b>01-06-2024</b> and Ending on <b>31-05-2029</b>
@@ -386,7 +423,7 @@
                   </li>
                   <li>
                     <b>Illegally Operated or Misuse from 2020 and April 2022</b>
-                    onwarsd of TS RERA & TG RERA Certificate/ License, business
+                    onwards of TS RERA & TG RERA Certificate/ License, business
                     names, brand name, business owner name, businesses emails,
                     personal emails, Stocks, GSTIN, PAN, Digital Signature/
                     Signature scam, ICICI car insurance, other insurance
@@ -398,6 +435,12 @@
                     Google Ads, Google Meet, WhatsApp, Social Media, Media & Ads
                     agencies, Fraud in Dharani website, Property Sale: Land,
                     Flats and rental services and many more...
+                  </li>
+                  <li>
+                    Since April/ May 2023 onwards in bank records name,
+                    address, and other details as per KYC
+                    <b>not maintaining/ following</b>.
+                    Suspecting misuse from other locations or other countries
                   </li>
                 </ul>
               </li>
@@ -412,11 +455,11 @@
                 <b class="red underline">Misuse/ Activities: </b><br />Any
                 activities with name as T Sangeetha, Tuma Sangeetha,
                 K.Sangeetha, Sangeetha Kandrigal, Late. Man Mohan Das Kandrigal
-                and Smt. Saraswathi Kandrigal with fake bank accounts, PAN,
-                Aadhaar, Email, Mobile no, and any Physical or Online business activities from
-                Registered Business Address or from fake address from other
-                locations, Intellectual Property/ Trademark Act are applicable
-                for such misuse/activities.
+                and Smt. Saraswati Kandrigal with fake bank accounts, PAN,
+                Aadhaar, Email, Mobile no, and any Physical or Online business
+                activities from Registered Business Address or from fake address
+                from other locations, Intellectual Property/ Trademark Act are
+                applicable for such misuse/activities.
               </li>
               <!-- misuse -->
               <li>
@@ -494,7 +537,7 @@
             Tuma
           </li>
           <li>
-            <b>D/o</b> Late. Man Mohan Das Kandrigal & Smt. Saraswathi Kandrigal
+            <b>D/o</b> Late. Man Mohan Das Kandrigal & Smt. Saraswati Kandrigal
           </li>
           <li>Married: August 1998</li>
           <li>Son: Mr. Pranav Tuma</li>
